envoy-ext-authz/envoy.yaml
static_resources:
  listeners:
  - name: main
    address: {socket_address: {address: 0.0.0.0, port_value: 8080}}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress
          route_config:
            virtual_hosts:
            - name: orders
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route: {cluster: orders}
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              failure_mode_allow: false
              http_service:
                server_uri: {uri: "http://auth:9000", cluster: auth, timeout: 0.5s}
                path_prefix: /check
                authorization_request:
                  allowed_headers: {patterns: [{exact: authorization}]}
                authorization_response:
                  allowed_upstream_headers: {patterns: [{exact: x-user}]}
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: auth
    type: STRICT_DNS
    load_assignment:
      cluster_name: auth
      endpoints: [{lb_endpoints: [{endpoint: {address: {socket_address: {address: auth, port_value: 9000}}}}]}]
  - name: orders
    type: STRICT_DNS
    load_assignment:
      cluster_name: orders
      endpoints: [{lb_endpoints: [{endpoint: {address: {socket_address: {address: orders, port_value: 80}}}}]}]
